# Sync_Lib

./: .gitignore  CMakeLists.txt  README.md  TODO.txt
app/: CMakeLists.txt  main.cpp
cmake/: internal_utils.cmake
code/: CMakeLists.txt  _Core.h  _sync_core.h  binder.h  multilogger.h  thread_pool.cpp  thread_pool.h
code/obsolete/: o_thread_pool.h
code/sync/: multilogger.h  thread_pool.h
code/test/: CMakeLists.txt  test.cpp  test.h
code/thread_pool/: CMakeLists.txt  thread_pool.h
config/: CMakeLists.txt  Config.hpp.in
configuration/: CMakeLists.txt
include/sync/: binder.h  thread_pool.h
obsolete/: multilogger.h  multilogger_test.cpp
scripts/: RUN_TESTS.bat  RUN_TESTS.sh
scripts/internal/: run_and_output.bat  run_and_output.sh
sync_lib/: CMakeLists.txt
sync_lib/include/sync/: basic_executor.hpp  execution_context.hpp  multilogger.hpp  scheduler.h  task_context.hpp  thread_pool.hpp
sync_lib/include/sync/detail/: binder.h  binder.hpp  core.hpp  output_interface.hpp  output_stream.hpp  priority_job.hpp  scheduler.hpp
sync_lib/include/sync/detail/impl/: binder.ipp  execution_context.ipp  multilogger.ipp  output_stream.ipp  priority_job.ipp  scheduler.ipp  task_context.ipp  thread_pool.ipp
sync_lib/test/: multilogger_test.cpp  task_context_test.cpp  thread_pool_test.cpp
test/: CMakeLists.txt  multilogger_test.cpp  thread_pool_test.cpp
